ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - sub.example.localhost
    secretName: backend-secret
  rules:
  - host: sub.example.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 443
